crates/plotnik-lib/tests/05-typegen/quantifiers/error_captured_group_wrapping_optional.txt
Q = (program {(debugger_statement)?} @x)
==== diagnostics ====
error: this group doesn't match exactly one node, so there is no single node to bind
 --> query.ptk:1:14
  |
1 | Q = (program {(debugger_statement)?} @x)
  |              ^^^^^^^^^^^^^^^^^^^^^^^
  |
help: capture individual nodes inside the group: `{(a) @a (b) @b} @x`
